Fix third content spacing

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -53,6 +53,7 @@ body {
     justify-content: center;
     align-items: center;
     flex-grow: 1;
+    padding: 100px 400px;
 }
 
 .content4 {
